fix overflow

--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -11,6 +11,11 @@
     position: absolute;
     font-size: 30px;
     top: 100px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    max-width: 75%;
   }
 
   .task__add-elements {
@@ -82,20 +87,30 @@
       }
       
       .task__title {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 85%;
         font-size: 30px;
         line-height: 85%;
       }
     }
 
-    .task__remove {
-      cursor: pointer;
+    .task__actions {
       position: absolute;
+      display: flex;
+      align-items: center;
+      gap: 20px;
       right: 10px;
       top: 10px;
-      border: none;
-      background: none;
-      width: 20px;
-      height: 20px;
+
+      .task__remove, .task__edit {
+        cursor: pointer;
+        border: none;
+        background: none;
+        width: 20px;
+        height: 20px;
+      }
     }
   }
 }
